added events listeners and load of data

--- a/index.html
+++ b/index.html
@@ -31,40 +31,41 @@
       <div class="profile-upper-body">
         <img class="profile-pic" src="./images/image-jeremy.png" alt="picture of a man">
         <h5>Report for</h5>
+        <h2>Jeremy Robson</h2>
       </div>
       <div class="profile-lower-body">
-        <p>Daily</p>
-        <p>Weekly</p>
-        <p>Monthly</p>
+        <p id="dailyToggle">Daily</p>
+        <p id="weeklyToggle">Weekly</p>
+        <p id="monthlyToggle">Monthly</p>
       </div>
     </div>
     <div class="work-section card">
-      <div class="card-body">
+      <div id="workSectionBody" class="card-body">
         <h4>Work</h4>
       </div>
     </div>
     <div class="play-section card">
-      <div class="card-body">
+      <div id="playSectionBody" class="card-body">
         <h4>Play</h4>
       </div>
     </div>
     <div class="study-section card">
-      <div class="card-body">
+      <div id="studySectionBody" class="card-body">
         <h4>Study</h4>
       </div>
     </div>
     <div class="exercise-section card">
-      <div class="card-body">
+      <div id="exerciseSectionBody" class="card-body">
         <h4>Exercise</h4>
       </div>
     </div>
     <div class="social-section card">
-      <div class="card-body">
+      <div id="socialSectionBody" class="card-body">
         <h4>Social</h4>
       </div>
     </div>
     <div class="self-care-section card">
-      <div class="card-body">
+      <div id="selfCareSectionBody" class="card-body">
         <h4>Self Care</h4>
       </div>
     </div>
@@ -77,7 +78,7 @@
     Coded by <a href="#">Thao Vang</a>.
   </div> -->
 
-  <script src="./scripts/app.js"></script>
+  <script type="module" src="./scripts/app.js"></script>
 </body>
 
 </html>
