added html elements

--- a/index.html
+++ b/index.html
@@ -42,31 +42,43 @@
     <div class="work-section card">
       <div id="workSectionBody" class="card-body">
         <h4>Work</h4>
+        <h1 id="workCurrent"></h1>
+        <h5 id="workPrevious"></h5>
       </div>
     </div>
     <div class="play-section card">
       <div id="playSectionBody" class="card-body">
         <h4>Play</h4>
+        <h1 id="playCurrent"></h1>
+        <h5 id="playPrevious"></h5>
       </div>
     </div>
     <div class="study-section card">
       <div id="studySectionBody" class="card-body">
         <h4>Study</h4>
+        <h1 id="studyCurrent"></h1>
+        <h5 id="studyPrevious"></h5>
       </div>
     </div>
     <div class="exercise-section card">
       <div id="exerciseSectionBody" class="card-body">
         <h4>Exercise</h4>
+        <h1 id="exerciseCurrent"></h1>
+        <h5 id="exercisePrevious"></h5>
       </div>
     </div>
     <div class="social-section card">
       <div id="socialSectionBody" class="card-body">
         <h4>Social</h4>
+        <h1 id="socialCurrent"></h1>
+        <h5 id="socialPrevious"></h5>
       </div>
     </div>
     <div class="self-care-section card">
       <div id="selfCareSectionBody" class="card-body">
         <h4>Self Care</h4>
+        <h1 id="selfCareCurrent"></h1>
+        <h5 id="selfCarePrevious"></h5>
       </div>
     </div>
 
