--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
   <section class="content-box">
     <div class="profile-card">
       <div class="profile-upper-body">
-        <img class="profile-pic" src="./images/image-jeremy.png" alt="picture of a man">
-        <h5>Report for</h5>
-        <h2>Jeremy Robson</h2>
+        <div class="profile-pic-box">
+          <img class="profile-pic" src="./images/image-jeremy.png" alt="picture of a man">
+        </div>
+        <div class="user-box">
+          <h5>Report for</h5>
+          <h2>Jeremy Robson</h2>
+        </div>
       </div>
       <div class="profile-lower-body">
         <p id="dailyToggle">Daily</p>
@@ -28,62 +32,74 @@
     </div>
     <div class="work-section card">
       <div id="workSectionBody" class="card-body">
-        <div class="card-section-header">
+        <div class="card-body-header">
           <h4>Work</h4>
           <img class="ellipsis-icons" src="./images/icon-ellipsis.svg" alt="ellipsis icons">
         </div>
-        <h1 id="workCurrent"></h1>
-        <h5 id="workPrevious"></h5>
+        <div class="card-body-time-text">
+          <h1 id="workCurrent"></h1>
+          <h5 id="workPrevious"></h5>
+        </div>
       </div>
     </div>
     <div class="play-section card">
       <div id="playSectionBody" class="card-body">
-        <div class="card-section-header">
+        <div class="card-body-header">
           <h4>Play</h4>
           <img class="ellipsis-icons" src="./images/icon-ellipsis.svg" alt="ellipsis icons">
         </div>
-        <h1 id="playCurrent"></h1>
-        <h5 id="playPrevious"></h5>
+        <div class="card-body-time-text">
+          <h1 id="playCurrent"></h1>
+          <h5 id="playPrevious"></h5>
+        </div>
       </div>
     </div>
     <div class="study-section card">
       <div id="studySectionBody" class="card-body">
-        <div class="card-section-header">
+        <div class="card-body-header">
           <h4>Study</h4>
           <img class="ellipsis-icons" src="./images/icon-ellipsis.svg" alt="ellipsis icons">
         </div>
-        <h1 id="studyCurrent"></h1>
-        <h5 id="studyPrevious"></h5>
+        <div class="card-body-time-text">
+          <h1 id="studyCurrent"></h1>
+          <h5 id="studyPrevious"></h5>
+        </div>
       </div>
     </div>
     <div class="exercise-section card">
       <div id="exerciseSectionBody" class="card-body">
-        <div class="card-section-header">
+        <div class="card-body-header">
           <h4>Exercise</h4>
           <img class="ellipsis-icons" src="./images/icon-ellipsis.svg" alt="ellipsis icons">
         </div>
-        <h1 id="exerciseCurrent"></h1>
-        <h5 id="exercisePrevious"></h5>
+        <div class="card-body-time-text">
+          <h1 id="exerciseCurrent"></h1>
+          <h5 id="exercisePrevious"></h5>
+        </div>
       </div>
     </div>
     <div class="social-section card">
       <div id="socialSectionBody" class="card-body">
-        <div class="card-section-header">
+        <div class="card-body-header">
           <h4>Social</h4>
           <img class="ellipsis-icons" src="./images/icon-ellipsis.svg" alt="ellipsis icons">
         </div>
-        <h1 id="socialCurrent"></h1>
-        <h5 id="socialPrevious"></h5>
+        <div class="card-body-time-text">
+          <h1 id="socialCurrent"></h1>
+          <h5 id="socialPrevious"></h5>
+        </div>
       </div>
     </div>
     <div class="self-care-section card">
       <div id="selfCareSectionBody" class="card-body">
-        <div class="card-section-header">
+        <div class="card-body-header">
           <h4>Self Care</h4>
           <img class="ellipsis-icons" src="./images/icon-ellipsis.svg" alt="ellipsis icons">
         </div>
-        <h1 id="selfCareCurrent"></h1>
-        <h5 id="selfCarePrevious"></h5>
+        <div class="card-body-time-text">
+          <h1 id="selfCareCurrent"></h1>
+          <h5 id="selfCarePrevious"></h5>
+        </div>
       </div>
     </div>
   </section>
