--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
   </section>
 
 
-  <!-- <div class="attribution">
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Thao Vang</a>.
-  </div> -->
+  </div>
 
   <script type="module" src="./scripts/app.js"></script>
 </body>
